--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "eslint": "^5.5.0",
+    "eslint-plugin-react": "^7.11.1",
     "react-router-dom": "^4.3.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.12.2",
