--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,16 @@
 {
-  "presets": ["env", "stage-3", "react"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "useBuiltIns": "entry"
+      }
+    ],
+    "@babel/preset-react"
+  ],
   "plugins": [
-    ["transform-class-properties"]
+    "@babel/plugin-transform-regenerator",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
