--- a/.babelrc
+++ b/.babelrc
@@ -12,5 +12,10 @@
   "plugins": [
     "@babel/plugin-transform-regenerator",
     "@babel/plugin-proposal-class-properties"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+    }
+  }
 }
