--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.2",
+    "enzyme": "^3.5.1",
+    "enzyme-adapter-react-16": "^1.4.0",
     "eslint": "^5.5.0",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.5.0",
